# RPizero-people-detector

./: CMakeLists.txt  Makefile  README.md  temp
cpp/: main.cpp  yolo_cpu.cpp
